--- a/templates/index.html
+++ b/templates/index.html
@@ -88,20 +88,20 @@ https://templatemo.com/tm-546-sixteen-clothing
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4>Best Offer</h4>
-            <h2>New Arrivals On Sale</h2>
+            <h4>Welcome to the</h4>
+            <h2>World of books</h2>
           </div>
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4>Flash Deals</h4>
-            <h2>Get your best products</h2>
+            <h4>Enjoy Your Stay</h4>
+            <h2>Download your books</h2>
           </div>
         </div>
         <div class="banner-item-03">
           <div class="text-content">
-            <h4>Last Minute</h4>
-            <h2>Grab last minute deals</h2>
+            <h4>Help Others</h4>
+            <h2>Upload the required books</h2>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Latest Products</h2>
+              <h2>Latest Books</h2>
               {% comment %} <a href="{% static 'products.html' %}">view all products <i class="fa fa-angle-right"></i></a> {% endcomment %}
             </div>
           </div>
@@ -153,14 +153,14 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="left-content">
-              <h4>Looking for the course books?</h4>
-              <p><a rel="nofollow" href="https://templatemo.com/tm-546-sixteen-clothing" target="_parent">This template</a> is free to use for your business websites. However, you have no permission to redistribute the downloadable ZIP file on any template collection website. <a rel="nofollow" href="https://templatemo.com/contact">Contact us</a> for more info.</p>
+              <h4>Welcome to Digital Library</h4>
+              
               <ul class="featured-list">
-                <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                <li><a href="#">Consectetur an adipisicing elit</a></li>
-                <li><a href="#">It aquecorporis nulla aspernatur</a></li>
-                <li><a href="#">Corporis, omnis doloremque</a></li>
-                <li><a href="#">Non cum id reprehenderit</a></li>
+                <li><a href="#">An initiative by the students of IITJ</a></li>
+                <li><a href="#">Raunak and Vipul</a></li>
+                <li><a href="#">Here You can download your books</a></li>
+                <li><a href="#">Dont worry if it is not there Just request for it</a></li>
+                <li><a href="#">Adios</a></li>
               </ul>
             </div>
           </div>
@@ -181,8 +181,8 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="inner-content">
               <div class="row">
                 <div class="col-md-8">
-                  <h4>Creative &amp; Unique <em>Sixteen</em> Products</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis amet elite author nulla.</p>
+                  <h4>Thank You </h4>
+                  
                 </div>
               </div>
             </div>
@@ -192,19 +192,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     </div>
 
     
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="inner-content">
-              <p>Copyright &copy; 2020 Sixteen Clothing Co., Ltd.
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+    
 
 
     <!-- Bootstrap core JavaScript -->
